--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 	</nav>
 
 	<div class="slogan">
-		<h5>Your Animation.<br />
-		On Time.<br />
-		On Budget.</h5>
+		<h5><a href="about.html">Your Animation.</a><br />
+		<a href="about.html">On Time.</a><br />
+		<a href="about.html">On Budget.</a></h5>
 	<p>&nbsp</p>
 		<h21><a href="about.html">Cloud based MoCap.</a></h21>
 
