add spacing, add entry in menu.html

--- a/test/menu.html
+++ b/test/menu.html
@@ -24,10 +24,11 @@
 			<br>
 <!-- content start -->
 <div class="links">
-	<h1><a href="services.html">Services</a></h1>
-	<h1><a href="about.html">About</a></h1>
-	<h1><a href="partners.html">Partners</a></h1>
-	<h1><a href="contact.html">Contact</a></h1>
+	<h1><a href="services.html">Services</a></h1><br>
+	<h1><a href="about.html">About</a></h1><br>
+	<h1><a href="partners.html">Partners</a></h1><br>
+	<h1><a href="contact.html">Contact</a></h1><br>
+	<h1><a href="prices.html">Prices</a></h1><br>
 </div>
 <!-- content end -->				
 		</div>
