--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
 	<div class="container ">
 		<div class="span-2" align="center" style="margin-top: 20px">
 			<ul class="none">
-				<li><a href="menu.html"><img src="images/menu_h_mid.png"></a>
+				<li><a href="menu.html"><img src="images/menu_v_left.png"></a>
 				<li><a href="not-found.html"><img src="images/facebook.png"></a>
 				<li><a href="not-found.html"><img src="images/twitter.png"></a>
 				<li><a href="not-found.html"><img src="images/youtube.png"></a>
