--- a/test/contact.html
+++ b/test/contact.html
@@ -26,6 +26,11 @@
 
 <h1>stuff</h1>
 
+<iframe src="https://docs.google.com/forms/d/1_Q-9Xw9NSFHrWXzo6odVIxO7cvNVO2_TXX2yka0WWqI/viewform?embedded=true"
+	width="700" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+
+&nbsp;
 <!-- content end -->				
 		</div>
 
